syntax = "proto3";

option java_package = "com.wemaka.weatherapp.store.proto";
option java_multiple_files = true;
option java_outer_classname = "UvIndexProto";

message UvIndexProto {
  int32 currentUvIndex = 1;
  int32 uvIndexDiff = 2;
  int32 imgIdChangeUvIndex = 3;
}
